<resources>
    <string name="app_name">Android Examples</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aws_authentication">AWS Authentication</string>
    <string name="firebase_authentication">Firebase Authentication</string>
    <string name="email_authentication">Email Authentication</string>
    <string name="phone_authentication">Phone Authentication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="verification_code">Verification Code</string>
    <string name="start_verification">Start Verification</string>
    <string name="verify_phone_number">Verify Phone number</string>
    <string name="resend_code">Resend Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_authentication">Google Authentication</string>
    <string name="facebook_authentication">Facebook Authentication</string>
    <string name="firebase_pre_built_ui">Firebase Pre-Built UI</string>
    <string name="facebook_application_id">1249214355803244</string>
    <string name="fb_login_protocol_scheme">fb1249214355803244</string>
    <string name="facebook_client_token">56789</string>
    <string name="phone_number">Phone Number</string>
</resources>